--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2 id="cpu-numbers"></h2>
 
     <script src="js/script.js"></script>
 </body>
