--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 id="cpu-numbers"></h2>
-
+    <div id="timer">
+        <h2 id="cpu-numbers"></h2>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
