--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="timer">
-        <h2 id="cpu-numbers"></h2>
-    </div>
+    <h1 id="numbers"></h1>
+    <h2 id="result"></h2>
     <script src="js/script.js"></script>
 </body>
 </html>
